# infra

./: .gitignore  .gitmodules  0.check_now.md  AGENTS.md  CI_ARCHITECTURE.md  CI_TEST.md  README.md  TEST_DIGGER.md  UAT.md  VALIDATION.md  VERIFICATION.md  agents.md  apps  atlantis.yaml  digger.yml  env.personal.zsh  env.shopee.zsh  init.sh  mkdocs.yml  mkdocs_gen_repo_pages.py  pyproject.toml  requirements-mkdocs.txt  terragrunt.hcl  test_digger_trigger.txt
.github/: AI_CODE_REVIEW.md  MIGRATION_AI_REVIEW.md  README.md
.terrateam/: config.yml
0.tools/: README.md  check-readme-coverage.sh  check_integrity.py  ci_load_secrets.py  data-import.sh  l3-import.sh  migrate-state.sh  preflight-check.sh  sync_secrets.py
0.tools/ci/: README.md  __main__.py  config.py  pyproject.toml
0.tools/ci/commands/: __init__.py  apply.py  check_vault.py  health.py  init.py  parse.py
0.tools/ci/core/: __init__.py  dashboard.py  github.py  terraform.py
1.bootstrap/: .terraform.lock.hcl  2.atlantis.tf  3.dns_and_cert.tf  4.storage.tf  4.traefik_config.tf  5.platform_pg.tf  README.md  locals.tf  moved.tf  network.md  outputs.tf  providers.tf  variables.tf
2.platform/: moved.tf  (+37 more)
e2e_regressions/: .env.example  .github-workflow-example.yml  ARCHITECTURE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  SSOT_INDEX.md  TESTING_STRATEGY.md  conftest.py  pyproject.toml  pytest.ini
e2e_regressions/tests/: ENV.md  README.md  test_api_health.py  test_databases.py  test_e2e_smoke.py  test_platform.py  test_portal_sso.py
e2e_regressions/tests/bootstrap/: README.md
e2e_regressions/tests/bootstrap/atlantis/: README.md  test_atlantis.py
e2e_regressions/tests/bootstrap/compute/: README.md  test_compute.py  test_digger.py
e2e_regressions/tests/bootstrap/dns_cert/: README.md  test_certificates.py  test_dns.py
e2e_regressions/tests/bootstrap/k8s/: README.md  test_cluster.py
e2e_regressions/tests/bootstrap/network/: README.md
e2e_regressions/tests/bootstrap/network_layer/: README.md  test_network.py
e2e_regressions/tests/bootstrap/platform_pg/: test_platform_pg.py
e2e_regressions/tests/bootstrap/storage/: test_storage.py
e2e_regressions/tests/bootstrap/storage_layer/: README.md  test_storage.py
e2e_regressions/tests/bootstrap/traefik/: README.md  test_traefik.py
e2e_regressions/tests/data/arangodb/: README.md
e2e_regressions/tests/data/clickhouse/: README.md
e2e_regressions/tests/data/postgresql/: README.md  test_postgresql.py
e2e_regressions/tests/ops/alerting/: README.md
e2e_regressions/tests/ops/pipeline/: README.md  test_pipeline.py
e2e_regressions/tests/ops/recovery/: README.md  test_recovery.py
e2e_regressions/tests/ops/standards/: README.md
e2e_regressions/tests/platform/auth/: README.md  test_auth.py
e2e_regressions/tests/platform/secrets/: README.md  test_secrets.py
e2e_regressions/tests/smoke/: test_smoke.py
(+468 files in other folders)
