[project]
name = "infra"
version = "0.1.0"
description = "Infrastructure as Code"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]
e2e = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-html>=4.0.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
ci = "tools.ci.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "e2e_regressions/tests"]
markers = [
    "smoke: quick smoke tests",
    "sso: SSO/Portal tests",
    "platform: Platform service tests",
    "api: API endpoint tests",
    "database: Database connection tests",
    "e2e: full end-to-end tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/ci"]
