[project]
name = "e2e-regressions"
version = "0.1.0"
description = "E2E regression tests for codex_infra deployment"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: quick smoke tests",
    "sso: SSO/Portal tests",
    "platform: Platform service tests",
    "api: API endpoint tests",
    "database: Database connection tests",
    "e2e: full end-to-end tests",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
