[project]
name = "infra-ci"
version = "0.1.0"
description = "Infrastructure CI/CD Pipeline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ci = "ci.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["0.tools/ci"]
